feat(symbols): getting full symbols details

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "typescript.preferences.importModuleSpecifier": "relative",
-    "cSpell.words": ["CTRADERX", "SPOTWARE"]
+    "cSpell.words": ["CTRADERX", "SPOTWARE", "Trendbar", "Trendbars"]
 }
