feat(orders): adds get open positions and orders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
     "typescript.preferences.importModuleSpecifier": "relative",
-    "cSpell.words": ["CTRADERX", "SPOTWARE", "Trendbar", "Trendbars"]
+    "cSpell.words": [
+        "BTCUSD",
+        "CTRADERX",
+        "EURUSD",
+        "SPOTWARE",
+        "Trendbar",
+        "Trendbars"
+    ]
 }
